<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn"
    android:background="@drawable/sign_in_page"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_h1"
        android:textSize="50dp"
        android:textColor="@color/text"
        android:layout_marginTop="130dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:fontFamily="@font/fredokaoneregular"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/logboxbg"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_h2"
            android:textColor="@color/colorPrimary"
            android:textSize="30dp"
            android:fontFamily="@font/fredokaoneregular"
            android:layout_marginTop="150dp"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_sub"
            android:textSize="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center_horizontal"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:elevation="10dp"
            android:hint="@string/log_user"
            android:textColorHint="@color/Divider"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="12dp"
            android:drawableStart="@drawable/ic_user"
            android:background="@drawable/chapter_bg"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:elevation="10dp"
            android:hint="@string/log_pass"
            android:textColorHint="@color/Divider"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="12dp"
            android:drawableStart="@drawable/ic_pass"
            android:background="@drawable/chapter_bg"
            />

        <Button
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/btn_bg"
            android:text="@string/log_submit"
            android:textStyle="bold"
            android:onClick="submit"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_forgot"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="10dp"
            android:gravity="center_horizontal"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginRight="20dp"
            android:text="@string/btn_sin"
            android:background="@drawable/signbtn_bg"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:text="@string/btn_sup"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/signbtn_bg2"
            android:onClick="goSignup"/>
    </LinearLayout>

</LinearLayout>