<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReadingPage"
    android:background="@drawable/reading_page"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_margin="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_margin="20dp"
            android:gravity="end">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_more" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rr_h1"
                android:gravity="center_horizontal"
                android:textSize="40dp"
                android:fontFamily="@font/brlndb"
                android:textColor="@color/text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginTop="80dp"
            android:gravity="end">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_propic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="120dp"
                android:layout_marginLeft="30dp"
                android:gravity="center_horizontal">

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="21"
                  android:textColor="@color/SecondaryText"
                  android:textSize="30dp"
                  android:fontFamily="@font/fredokaoneregular"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prf_book"
                    android:textColor="@color/SecondaryText"
                    android:textSize="15dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="120dp"
                android:layout_marginLeft="10dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="50k"
                    android:textColor="@color/SecondaryText"
                    android:textSize="30dp"
                    android:fontFamily="@font/fredokaoneregular"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    android:textColor="@color/SecondaryText"
                    android:textSize="15dp"
                    android:gravity="center_horizontal"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="120dp"
                android:layout_marginLeft="10dp"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="30"
                    android:textColor="@color/SecondaryText"
                    android:textSize="30dp"
                    android:fontFamily="@font/fredokaoneregular"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/following"
                    android:textColor="@color/SecondaryText"
                    android:textSize="15dp"
                    android:gravity="center_horizontal"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <Button
                android:layout_width="110dp"
                android:layout_height="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="165dp"
                android:background="@drawable/btn_bg"
                android:text="@string/prf_btn"
                android:textSize="10dp"/>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prf_h1"
            android:textColor="@color/SecondaryText"
            android:textSize="20dp"
            android:fontFamily="@font/brlndb"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/signbtn_bg2"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_cart"
                android:paddingLeft="30dp"
                android:paddingTop="2dp"
                android:paddingRight="30dp"
                android:paddingBottom="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/prf_cart"
                android:textColor="@color/PrimaryText"
                android:textSize="20dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/signbtn_bg2"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_cradit"
                android:paddingLeft="30dp"
                android:paddingTop="2dp"
                android:paddingRight="30dp"
                android:paddingBottom="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/prf_purchases"
                android:textColor="@color/PrimaryText"
                android:textSize="20dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/signbtn_bg2">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_account"
                android:paddingLeft="30dp"
                android:paddingTop="2dp"
                android:paddingRight="30dp"
                android:paddingBottom="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/prf_account"
                android:textColor="@color/PrimaryText"
                android:textSize="20dp"
                />


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prf_h2"
            android:textColor="@color/SecondaryText"
            android:textSize="20dp"
            android:fontFamily="@font/brlndb"
            android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/signbtn_bg2"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_notifications"
            android:paddingLeft="30dp"
            android:paddingTop="2dp"
            android:paddingRight="30dp"
            android:paddingBottom="2dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/prf_notification"
            android:textColor="@color/PrimaryText"
            android:textSize="15dp"
            android:gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/signbtn_bg2"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_language"
            android:paddingLeft="30dp"
            android:paddingTop="2dp"
            android:paddingRight="30dp"
            android:paddingBottom="2dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/prf_language"
            android:textColor="@color/PrimaryText"
            android:textSize="15dp"
            android:gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/signbtn_bg2">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_exit"
            android:paddingLeft="30dp"
            android:paddingTop="2dp"
            android:paddingRight="30dp"
            android:paddingBottom="2dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/prf_sout"
            android:textColor="@color/PrimaryText"
            android:textSize="15dp"
            android:gravity="center"
            />
        </LinearLayout>
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>